// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile Tile Snapshot can move matches current snapshot 1`] = `
<div
  class="hex tile"
  draggable="true"
  style="--color: #f64c72;"
  title="ant"
>
  <svg
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="/svg/creatures.svg#ant"
    />
  </svg>
</div>
`;

exports[`Tile Tile Snapshot no moves matches current snapshot 1`] = `
<div
  class="hex tile"
  draggable="false"
  style="--color: #85dcbc;"
  title="fly"
>
  <svg
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="/svg/creatures.svg#fly"
    />
  </svg>
</div>
`;
